# PoSB_Fall_2025_Final_Project

./: .gitignore  ARS_Final_Project_Manuscript.docx  pyproject.toml  revised_circuit_design.docx  ~$S_Final_Project_Manuscript.docx
Final_Project_SVGs/: pulse_responses_xml.xml
npz/: README.md
src/: fig1.html  fig1.ipynb  fig2.ipynb  fig5.ipynb  sim.ipynb
src/.ipynb_checkpoints/: fig1-checkpoint.ipynb
src/ars_247_2025_final_project/: analysis.py  tools.py  tram_model.py  vis.py
src/ars_247_2025_final_project/models/: __init__.py  delay_model.py  stress_model.py  td_model.py  tram_model.py
