[project]
name = "ars-247-2025-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexSath",email = "sathler10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ars_247_2025_final_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
